# Web3-Bounty-Hunting-MockRepo

./: .env  .env.example  .gitignore  Cargo.toml  README.md  hardhat.config.js  index.html  package-lock.json  package.json  webpack.config.js
artifacts/contracts/Lock.sol/: Lock.dbg.json
artifacts/contracts/TaskBounty.sol/: TaskBounty.json
artifacts/contracts/Test.sol/: Test.json
cache/: solidity-files-cache.json
contracts/: TaskBounty.sol  Test.sol
scripts/: deploy.js  interact.js
src/: index.js  lib.rs
static/css/: styles.css  toast.css
static/js/: config.js  github-integration.js  main.js
test/: TaskBounty.js
